compiler/testData/diagnostics/tests/substitutions/kt1558-short.kt
import java.util.List

fun testArrays(ci : List<Int>) {
    ci.toArray<Int>(<!UNRESOLVED_REFERENCE!>x<!>)
}